--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,34 @@
+
+html{
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body{
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.block-none{
+  display: none;
+}
+
+#root{
+   margin: 0;
+    background: linear-gradient(235deg,#d6cba7,#d6c08d,#b09c6f, #a4a4a4);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+
 .App {
   text-align: center;
+  width: 360px;
+  margin: 0 auto;
+  padding-top: 60px;
 }
 
 .App-logo {
@@ -38,35 +67,127 @@
 }
 
 
-ul{
-  width: 300px;
+.lists{
+  padding: 0;
+  width: 360px;
   margin: 0 auto;
-}
-
-li{
   display: flex;
-  height: 100px;
+  flex-wrap: wrap;
+  border: 2px solid #fff;
+   background: rgb(0,0,0,0.1)
 }
 
-li button{
-  margin-top: 15px;
-  height: 70%;
+.lists li{
+  display: flex;
+  width: 360px;
+  margin: 10px 0;
 }
 
-
-li p{
-  text-align:left;
+.lists li p{
   width: 200px;
-  border: 1px solid black;
-  padding-left: 10px;
+  border: 2px solid #d4d4d4;
+  height: 35px;
+  margin-top: 13px;
+  text-align: center;
+  padding-top: 5px;
+  margin-right: 10px;
+}
+
+.lists li input{
+  background: #d6cba7;
+  border: 1px #a39a7a;
+  color: #1a170e;
+  font-weight: 700;
+  text-shadow: 0 5px 10px #000;
+  width: 20px;
+  height: 20px;
+  margin-top: 25px;
+  margin-left: 20px;
+  margin-right: 30px;
+  text-align: center;
+  box-shadow: 0 0 3px 2px #a39a7a;
   transition-duration: 0.3s;
 }
 
-li p:hover{
-  background: #d4d4d4;
-}
 
-li.completed p{
+.lists li.completed p{
   text-decoration: line-through;
 }
 
+.btns-global{
+  display: flex;
+  flex-wrap: wrap;
+  width: 360px;
+  margin: 0 auto;
+  transition-duration: 0.3s;
+  opacity: 1;
+  border: 2px solid #fff;
+   background: rgb(0,0,0,0.1)
+}
+
+.btns-global button ,
+.add-new-item button,
+.lists li button{
+  background: #d6cba7;
+  border: 1px #a39a7a;
+  color: #1a170e;
+  font-weight: 700;
+  text-shadow: 0 5px 10px #000;
+  margin: 10px;
+  width: 100px;
+  height: 40px;
+  text-align: center;
+  box-shadow: 0 0 3px 2px #a39a7a;
+  transition-duration: 0.3s;
+}
+
+.btns-global button:hover,
+.add-new-item button:hover{
+  transform: scale(1.1);
+  color: #fff;
+}
+
+.add-new-item{
+  border: 2px solid #fff;
+  width: 360px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+   background: rgb(0,0,0,0.1)
+}
+
+.add-new-item input{
+  width: 200px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 20px;
+  margin: 10px;
+  padding-left: 10px;
+  background: #d1bf97;
+  border: 2px solid #a4a4a4; 
+  transition-duration: 0.3s;
+}
+
+.add-new-item input:focus{
+  outline: none;
+  color: #fff;
+}
+
+.add-new-item button{
+  margin-top: 13px;
+}
+
+.lists li button{
+  margin-top: 15px;
+  height: 40px;
+  width: 50px;
+  font-size: 30px;
+  color: #9c2a3b;
+  text-shadow: none;
+}
+
+.lists li button:hover{
+  font-size: 37px;
+  color: #e84159;
+  background: #a39a7a;
+}
