--- a/src/App.css
+++ b/src/App.css
@@ -9,88 +9,68 @@ body{
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
-.block-none{
-  display: none;
+@font-face{
+  font-family: 'Yahoo';
+  src: url('YahooC-Bold.otf');
+}
+
+*{
+  font-family: 'Yahoo';
 }
 
 #root{
    margin: 0;
-    background: linear-gradient(235deg,#d6cba7,#d6c08d,#b09c6f, #a4a4a4);
+    background: #fff;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
+    padding-top: 20px;
 }
 
 .App {
   text-align: center;
-  width: 360px;
+  width: 600px;
   margin: 0 auto;
   padding-top: 60px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 50px solid #faae61;
+  border-top: 100px solid #faae61;
+  border-bottom: 100px solid #faae61;
 }
 
 
 .lists{
   padding: 0;
-  width: 360px;
+  width: 600px;
+  max-height: 400px;
+  overflow: auto;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid #fff;
-   background: rgb(0,0,0,0.1)
+  
 }
 
 .lists li{
   display: flex;
-  width: 360px;
+  width: 600px;
   margin: 10px 0;
 }
 
 .lists li p{
-  width: 200px;
-  border: 2px solid #d4d4d4;
+  width: 300px;
+  border: 3px solid #ba8147;
+  border-radius: 10px;
   height: 35px;
   margin-top: 13px;
   text-align: center;
   padding-top: 5px;
-  margin-right: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  color: #ba8147;
+  transition-duration: 0.3s;
 }
 
 .lists li input{
@@ -102,92 +82,239 @@ body{
   width: 20px;
   height: 20px;
   margin-top: 25px;
-  margin-left: 20px;
-  margin-right: 30px;
+  margin-left: 60px;
+  margin-right: auto;
   text-align: center;
-  box-shadow: 0 0 3px 2px #a39a7a;
   transition-duration: 0.3s;
 }
 
 
 .lists li.completed p{
   text-decoration: line-through;
+  color: #573f27;
+  border: 3px solid #573f27;
 }
 
 .btns-global{
   display: flex;
   flex-wrap: wrap;
-  width: 360px;
+  width: 600px;
   margin: 0 auto;
   transition-duration: 0.3s;
   opacity: 1;
-  border: 2px solid #fff;
-   background: rgb(0,0,0,0.1)
+  margin-top: 30px;
+  margin-bottom: -53px;
+  border-bottom: 60px solid #fff;
+  border-radius: 50px;
+  position: relative;
 }
 
-.btns-global button ,
-.add-new-item button,
-.lists li button{
-  background: #d6cba7;
-  border: 1px #a39a7a;
-  color: #1a170e;
+.btns-global button{
+  border: 3px solid #faae61;
+  border-radius: 10%;
+  color: #ba8147;
   font-weight: 700;
-  text-shadow: 0 5px 10px #000;
-  margin: 10px;
-  width: 100px;
-  height: 40px;
+  width: 200px;
+  margin: 0 auto;
+  height: 70px;
+  background: none;
   text-align: center;
-  box-shadow: 0 0 3px 2px #a39a7a;
   transition-duration: 0.3s;
 }
 
 .btns-global button:hover,
 .add-new-item button:hover{
   transform: scale(1.1);
-  color: #fff;
+  box-shadow: 0 5px 5px 5px #d4d4d4;
 }
 
 .add-new-item{
-  border: 2px solid #fff;
-  width: 360px;
+  width: 600px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-   background: rgb(0,0,0,0.1)
+  margin-top: -103px;
+  border-top: 60px solid #fff;
+  border-radius: 50px;
+  position: relative;
+}
+
+
+.add-new-item img,
+.btns-global img{
+  width: 100px;
+  bottom: 0px;
+  right: 10px;
+  position: absolute;
+}
+
+.btns-global img{
+  bottom: -80px;
+  right: -10px;
+}
+
+.add-new-item img:first-child{
+  top: -60px;
+  left: 10px;
+  transform: scale(-1,-1);
 }
 
 .add-new-item input{
-  width: 200px;
-  height: 40px;
+  width: 460px;
+  height: 60px;
   font-weight: 500;
-  font-size: 20px;
-  margin: 10px;
+  font-size: 16px;
+  margin: 0 auto;
+  margin-top: 15px;
   padding-left: 10px;
-  background: #d1bf97;
-  border: 2px solid #a4a4a4; 
+  border: 3px solid #faae61;
   transition-duration: 0.3s;
+  color: #8a643e;
 }
 
 .add-new-item input:focus{
   outline: none;
-  color: #fff;
 }
 
 .add-new-item button{
+  transition-duration: 0.3s;
+  background: none;
+  color: #ba8147;
+  text-shadow: none;
+  box-shadow: none;
+  border: 3px solid #faae61;
+  border-radius: 10px;
+  font-size: 20px;
+  width: 200px;
+  height: 70px;
+  margin: 0 auto;
   margin-top: 13px;
 }
 
 .lists li button{
-  margin-top: 15px;
+  margin-top: 7px;
+  margin-right: 50px;
+  margin-left: auto;
   height: 40px;
   width: 50px;
   font-size: 30px;
   color: #9c2a3b;
   text-shadow: none;
+  border: none;
+  background: none;
+  box-shadow: none;
+  transition-duration: 0.3s;
 }
 
 .lists li button:hover{
-  font-size: 37px;
+  font-size: 34px;
   color: #e84159;
-  background: #a39a7a;
+  text-shadow: 0 5px 5px #a4a4a4;
+}
+
+@media (max-width: 600px){
+
+  body{
+    overflow: auto;
+  }
+
+  #root{
+    padding-top: 20px;
+  }
+
+  .App {
+    width: 360px;
+    border: 30px solid #faae61;
+    border-top: 70px solid #faae61;
+    border-bottom: 70px solid #faae61;
+  }
+
+
+  .lists{
+    width: 360px;
+  }
+
+  .lists li{
+    width: 360px;
+  }
+
+  .lists li p{
+    width: 200px;
+  }
+
+  .lists li input{
+    margin-left: 20px;
+  }
+
+  .btns-global{
+    width: 360px;
+    margin-bottom: -40px;
+    border-bottom: 45px solid #fff;
+    border-radius: 50px;
+  }
+
+  .btns-global button{
+    width: 170px;
+    font-size: 11px;    
+  }
+
+  .btns-global button:hover,
+  .add-new-item button:hover{
+    transform: scale(1.1);
+    box-shadow: 0 5px 5px 5px #d4d4d4;
+  }
+
+  .add-new-item{
+    width: 360px;
+    margin-top: -105px;
+    border-top: 45px solid #fff;
+  }
+
+
+  .add-new-item img,
+  .btns-global img{
+    width: 70px;
+    bottom: 0px;
+    right: 0px;
+  }
+
+  .btns-global img{
+    bottom: -50px;
+    right: -20px;
+  }
+
+  .add-new-item img:first-child{
+    top: -50px;
+  }
+
+  .add-new-item input{
+    width: 300px;
+    height: 60px;
+  }
+
+  .add-new-item button{
+    font-size: 15px;
+  }
+
+  .lists li button{
+    margin-top: 13px;
+    margin-right: 10px;
+    margin-left: auto;
+    height: 40px;
+    width: 50px;
+    font-size: 25px;
+    color: #9c2a3b;
+    text-shadow: none;
+    border: none;
+    background: none;
+    box-shadow: none;
+    transition-duration: 0.3s;
+  }
+
+  .lists li button:hover{
+    font-size: 30px;
+    color: #e84159;
+    text-shadow: 0 5px 5px #a4a4a4;
+  }
+
 }
