--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ body{
   width: 300px;
   border: 3px solid #ba8147;
   border-radius: 10px;
-  height: 35px;
+  min-height: 35px;
   margin-top: 13px;
   text-align: center;
   padding-top: 5px;
