--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ body{
   width: 600px;
   max-height: 400px;
   overflow: auto;
+  overflow-x: hidden;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
