--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,7 @@ body{
     margin-right: 50px;
     margin-left: auto;
     width: 50px;
+    height: 59px;
     transition-duration: 0.3s;
   }
 
